# Betalist

./: Betalist Webscraper.ipynb  README.md  SME.csv  fintech.csv  main.py  movies.csv  pyproject.toml
checker/: scrapable.py
